# kekw-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
crates/kekw_client/: Cargo.toml
crates/kekw_endpoints/: Cargo.toml
crates/kekw_eventsub/: Cargo.toml
crates/kekw_lib/: Cargo.toml
crates/kekw_macros/: Cargo.toml
crates/kekw_macros/src/: ext.rs  lib.rs  parsers.rs
crates/kekw_oauth2/: Cargo.toml
crates/kekw_oauth2/examples/: app_auth.rs
crates/kekw_oauth2/src/: lib.rs  server.rs
crates/kekw_oauth2/src/requests/impl/: impl_http_types.rs  impl_isahc.rs
crates/kekw_types/: Cargo.toml
kekw/: Cargo.toml
kekw_api/: Cargo.toml
kekw_bot/: Cargo.toml
kekw_client/: Cargo.toml
kekw_endpoints/: Cargo.toml
kekw_eventsub/: Cargo.toml
kekw_lib/: Cargo.toml
kekw_macros/: Cargo.toml
kekw_macros/src/: ext.rs  lib.rs
kekw_oauth2/: Cargo.toml
kekw_oauth2/examples/: authorization_code_grant_flow.rs
kekw_oauth2/src/: endpoints.rs  lib.rs  response.rs  server.rs
kekw_oauth2/src/requests/: mod.rs
kekw_oauth2/src/types/: mod.rs  scopes.rs
kekw_types/: Cargo.toml
kekw_types/src/: lib.rs  url.rs
nix/: default.nix
src/: main.rs
