[workspace]
resolver = "2"
members = [
    "kekw",
    "kekw_api",
    "kekw_bot",
    "kekw_client",
    "kekw_endpoints",
    "kekw_macros",
    "kekw_oauth2",
]
default-members = ["kekw", "kekw_bot"]

[workspace.package]
name = "kekw"
version = "0.0.0"
description = "Agnostic API wrapper for Twitch Helix and EventSub."
homepage = "https://github.com/spikespaz/kekw-rs"
authors = ["Jacob Birkett <support@birkett.dev>"]
license = "MIT"
keywords = ["twitch", "eventsub", "oauth", "async", "http-client"]
edition = "2021"
