[package]
name = "kekw"
version.workspace = true
description.workspace = true
homepage.workspace = true
# documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kekw_api = { path = "../kekw_api" }
kekw_client = { path = "../kekw_client" }
kekw_endpoints = { path = "../kekw_endpoints" }
kekw_macros = { path = "../kekw_macros" }
