[package]
name = "kekw_bot"
version = "0.0.0"
description.workspace = true
homepage.workspace = true
# documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [features]
# docs = []

[dependencies]
