[package]
name = "kekw_oauth2"
version = "0.0.0"
description.workspace = true
homepage.workspace = true
# documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
docs = []

[dependencies]
kekw_macros = { path = "../kekw_macros" }
aliri_braid = { git = "https://github.com/spikespaz/aliri_braid_secret" }
# http-types = { version = "2", default-features = false }
typed-builder = "0.18"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2.3"
url = { version = "2.5", features = ["serde"] }
