[package]
name = "kekw_oauth2"
version = "0.0.0"
description.workspace = true
homepage.workspace = true
# documentation.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition = "2021"

publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
http-types = ["dep:http-types"]
isahc = ["dep:isahc", "isahc/json"]

docs = ["http-types", "isahc"]

[dependencies]
kekw_macros = { path = "../kekw_macros" }
aliri_braid = { git = "https://github.com/spikespaz/aliri_braid_secret" }
typed-builder = "0.18"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2"
url = { version = "2", features = ["serde"] }
thiserror = "1"
async-net = "2"
futures-lite = "2"
# TODO: Remove this
serde_qs = "0.13"
http-types = { version = "2", optional = true, default-features = false }
isahc = { version = "1", optional = true, default-features = false }
csrf = "0.4.1"
serde_json = "1.0.115"

[dev-dependencies]
futures = "0.3.30"
once_cell = "1.19.0"
open = "5.1.2"
smol = "2.0.0"
url = "2"
