[package]
name = "kekw_client"
version = "0.0.0"
authors.workspace = true
description = "An HTTP client that aims to be a uniform wraper around the variety of Twitch APIs."
categories = [
    "api-bindings",
    "asynchronous",
    "authentication",
    "web-programming::http-client",
    "web-programming::websocket",
]
keywords = ["twitch", "http-client", "http-api", "async", "oauth"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"

publish = false

[features]
docs = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
