[package]
name = "kekw_lib"
version = "0.0.0"
authors.workspace = true
description = "Derives, macros, functions and types to assist with wrapping web APIs."
categories = ["web-programming", "value-formatting", "rust-patterns"]
keywords = ["http", "proc-macro", "async", "utilities"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

publish = false

[features]
docs = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
