[package]
name = "kekw_macros"
version = "0.0.0"
authors.workspace = true
description = "Derives and macros for common rust patterns, often relating to web programming."
categories = ["value-formatting", "rust-patterns"]
keywords = ["proc-macro", "http", "utilities"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

publish = false

[lib]
proc-macro = true

[features]
docs = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
