[package]
name = "kekw_oauth2"
version = "0.0.0"
authors.workspace = true
description = "A convenient API for authenticating with the various Twitch APIs."
categories = ["api-wrappers", "web-programming", "rust-patterns"]
keywords = ["twitch", "oauth2", "authentication", "http-api", "utilities"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

publish = false

[features]
http-types = ["dep:http-types"]
isahc = ["dep:isahc", "isahc/json"]

docs = ["http-types", "isahc"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kekw_macros.workspace = true
aliri_braid = { git = "https://github.com/spikespaz/aliri_braid_secret" }
typed-builder = "0.18"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2"
url = { version = "2", features = ["serde"] }
thiserror = "1"
async-net = "2"
futures-lite = "2"
# TODO: Remove this
serde_qs = "0.13"
http-types = { version = "2", optional = true, default-features = false }
isahc = { version = "1", optional = true, default-features = false }
csrf = "0.4.1"
serde_json = "1.0.115"
eyre = "0.6"
rand = "0.8"

[dev-dependencies]
futures = "0.3.30"
isahc = { version = "1", features = ["json"] }
once_cell = "1.19.0"
open = "5.1.2"
serde_json = "1.0.115"
smol = "2.0.0"
